Add Satisfy Font and sidenav3
We're heading to Mars

--- a/About me.html
+++ b/About me.html
@@ -8,10 +8,10 @@
         <nav class="sidenav">
             <a class="main" href="main.html">Mugeon Kim</a>
             <div class="navlist">
-                <a href="About me.html">About Me</a>
+                <a href="About me.html" class="current">About Me</a>
                 <a href="sidenav1.html">sidenav1</a>
                 <a href="sidenav2.html">sidenav2</a>
-                <a class="empty">empty</a>
+                <a href="sidenav3.html">sidenav3</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
