--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
                 <a href="About me.html">About Me</a>
                 <a href="sidenav1.html">sidenav1</a>
                 <a href="sidenav2.html">sidenav2</a>
-                <a class="empty">empty</a>
+                <a href="sidenav3.html">sidenav3</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
