--- a/sidenav2.html
+++ b/sidenav2.html
@@ -10,8 +10,8 @@
             <div class="navlist">
                 <a href="About me.html">About Me</a>
                 <a href="sidenav1.html">sidenav1</a>
-                <a href="sidenav2.html">sidenav2</a>
-                <a class="empty">empty</a>
+                <a href="sidenav2.html" class="current">sidenav2</a>
+                <a href="sidenav3.html">sidenav3</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
