--- a/sidenav3.html
+++ b/sidenav3.html
@@ -9,9 +9,9 @@
             <a class="main" href="main.html">Mugeon Kim</a>
             <div class="navlist">
                 <a href="About me.html">About Me</a>
-                <a href="sidenav1.html" class="current">sidenav1</a>
+                <a href="sidenav1.html">sidenav1</a>
                 <a href="sidenav2.html">sidenav2</a>
-                <a href="sidenav3.html">sidenav3</a>
+                <a href="sidenav3.html" class="current">sidenav3</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
@@ -24,10 +24,29 @@
         </nav>
     <div class="page">
         <div class="title">
-            <a href="sidenav1.html">sidenav1.html</a>
+            <a href="sidenav3.html">sidenav3.html</a>
         </div>
         <div class="content">
-            <a href="About INTP.html" class="subheading">About INTP</a>
+            <div class="colors">
+                <color>
+                    <quote>
+                        Failue is an option here.<br>
+                        If things are not failing,<br>
+                        you are not innovating enough.
+                        <author>
+                            - Elon Musk
+                        </author>
+                    </quote>
+                </color>
+                <color class="fast-color">
+                    <quote>
+                        WE'RE HEADING TO MARS !!
+                        <author>
+                            - Elon Musk
+                        </author>
+                    </quote>
+                </color>
+            </div>
         </div>
         <div class="footer">
         </div>
