--- a/About INTP.html
+++ b/About INTP.html
@@ -9,9 +9,9 @@
             <a class="main" href="main.html">Mugeon Kim</a>
             <div class="navlist">
                 <a href="About me.html">About Me</a>
-                <a href="sidenav1.html">sidenav1</a>
+                <a href="sidenav1.html" class="current">sidenav1</a>
                 <a href="sidenav2.html">sidenav2</a>
-                <a class="empty">empty</a>
+                <a href="sidenav3.html">sidenav3</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
