Add Dummy index.html
index.html refreshes page to main.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>P.CLASS</title>
+        <title>Mugeon Kim Page</title>
+        <meta http-equiv="refresh" content="0; url=https://sselrats.github.io/legendary-goggles/main.html" />
+        <link rel="stylesheet" href="common.css">
     </head>
     <body>
-        <h1><a href="index.html">프라이빗클래스</a></h1>
-        <div>
-            <h2>
-                <a href="howtouse.html">프라이빗클래스 이용방법</a>
-            </h2>
-        </div>
-        <div>
-            <p>
-                프라이빗클래스입니다.
-            </p>
-        </div>        
     </body>
 </html>
