--- a/About me.html
+++ b/About me.html
@@ -9,10 +9,10 @@
             <a class="main" href="main.html">Mugeon Kim</a>
             <div class="navlist">
                 <a href="About me.html" class="current">About Me</a>
-                <a href="sidenav1.html">sidenav1</a>
-                <a href="sidenav2.html">sidenav2</a>
-                <a href="sidenav3.html">sidenav3</a>
-                <a class="empty">empty</a>
+                <a href="sidenav1.html" class="filled">sidenav1</a>
+                <a href="sidenav2.html" class="filled">sidenav2</a>
+                <a href="sidenav3.html" class="filled">sidenav3</a>
+                <a href="sidenav4.html" class="filled">sidenav4</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
@@ -38,7 +38,7 @@
                 </div>
                 <div>
                     <p class="subheading">Education</p>
-                    <p>(2020 ~ ) SNU Math, CSE</p>
+                    <p>(2020 ~ ) SNU Mathematics, CSE</p>
                     <p>(2017 ~ 2019) GSHS 35th</p>
                 </div>
                 <div>
