--- a/sidenav2.html
+++ b/sidenav2.html
@@ -8,11 +8,11 @@
         <nav class="sidenav">
             <a class="main" href="main.html">Mugeon Kim</a>
             <div class="navlist">
-                <a href="About me.html">About Me</a>
-                <a href="sidenav1.html">sidenav1</a>
+                <a href="About me.html" class="filled">About Me</a>
+                <a href="sidenav1.html" class="filled">sidenav1</a>
                 <a href="sidenav2.html" class="current">sidenav2</a>
-                <a href="sidenav3.html">sidenav3</a>
-                <a class="empty">empty</a>
+                <a href="sidenav3.html" class="filled">sidenav3</a>
+                <a href="sidenav4.html" class="filled">sidenav4</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
                 <a class="empty">empty</a>
@@ -30,7 +30,7 @@
             <div class="cards">
                 <div class="card" id="first-card">
                     <tag>1</tag>
-                </div>
+                </div>  
                 <div class="card">
                     <tag>2</tag>
                 </div>
